terraform/arch/terraform-middle/dev/45-eks-setting/standard/service-weight/webtest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testweb-service
  labels:
    name: testweb-service
spec:
  selector:
    app: webtest
  ports:
    - name: server
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: testweb-app
---
apiVersion: v1
kind: Service
metadata:
  name: testweb-service
  labels:
    name: testweb-service
spec:
  selector:
    app: webtest
    version: v1
  ports:
    - name: server
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: testweb-app
---
apiVersion: v1
kind: Service
metadata:
  name: testweb-service
  labels:
    name: testweb-service
spec:
  selector:
    app: webtest
    version: v2
  ports:
    - name: server
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: testweb-app
