terraform/arch/terraform-middle/dev/45-eks-setting/standard/service-weight/all.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: testweb-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - testweb.azjaehyun.shop
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - testweb.azjaehyun.shop
    port:
      name: https-443
      number: 443
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: testweb-virtualservice
  namespace: default
spec:
  gateways:
  - testweb-gateway
  hosts:
  - testweb.azjaehyun.shop
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: testweb-service
        port:
          number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: testweb-service
  labels:
    name: testweb-service
spec:
  ports:
    - name: server
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: testweb-app             
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testweb-app
  name: testweb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testweb-app
  template:
    metadata:
      labels:
        app: testweb-app
    spec:
      containers:
        - image: symjaehyun/springhelloterra:1.0
          name: testweb
          ports:
            - containerPort: 8080
          #env:
          #  - name: profile
          #    value: "eks"
